--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -20,3 +20,29 @@ body {
   padding: 15px 34px;
   cursor: pointer;
 }
+.title {
+  text-align: center;
+  font-family: Roboto Condensed;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 56px;
+  text-transform: uppercase;
+  color: #000000;
+  position: relative;
+  margin-bottom: 60px;
+  &::before,
+  &::after {
+    position: absolute;
+    content: "";
+    width: 373px;
+    height: 1px;
+    background-color: #c4c4c4;
+    top: 27px;
+  }
+  &::before {
+    left: 0;
+  }
+  &::after {
+    right: 0;
+  }
+}
