--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -1,11 +1,8 @@
 html {
   box-sizing: border-box;
 }
-p{
-  color: blueviolet;
-}
-p{
-  color: crimson;
+*{
+  margin: 0;
 }
 *,
 *::after,
@@ -32,7 +29,8 @@ figure,
 figcaption,
 blockquote,
 dl,
-dd {
+dd, 
+section {
   margin: 0;
 }
 
@@ -51,7 +49,6 @@ textarea,
 select {
   font: inherit;
 }
-
 a {
   text-decoration: none;
 }
