--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
   margin: 0 auto;
 }
 
-.header-nav__btn, .header-info__btn, .ready-inner__btn, .decision__btn, .work__btn, .content__btn, .contact-info__btn, .social__btn, .review__btn {
+.header-nav__btn, .header-info__btn, .ready-inner__btn, .decision__btn, .work__btn, .content__btn, .contact-info__btn, .social__btn, .review__btn, .footer__form-btn {
   font-family: Roboto Condensed;
   font-style: normal;
   font-weight: 400;
@@ -526,6 +526,10 @@ body {
   color: #ffffff;
 }
 
+.content .contact-info__label {
+  width: 100%;
+}
+
 .content__inner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -912,5 +916,142 @@ body {
 .review__btn {
   display: block;
   margin: 0 auto;
+}
+
+.footer {
+  background-image: url("../img/bg.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: center;
+  margin-left: -1px;
+  margin-top: -2px;
+  padding: 74px 0 83px;
+  color: #ffffff;
+}
+
+.footer .contact-info__label {
+  width: 100%;
+}
+
+.footer__title {
+  text-align: center;
+  font-size: 48px;
+  line-height: 56px;
+  text-transform: uppercase;
+  margin-bottom: 28px;
+}
+
+.footer__subtitle {
+  font-size: 18px;
+  line-height: 21px;
+  margin-bottom: 42px;
+  text-align: center;
+}
+
+.footer__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.footer__form {
+  width: 455px;
+}
+
+.footer__form-input {
+  width: 100%;
+  margin-bottom: 18px;
+  border: 1px solid #e3e3e3;
+  border-radius: 3px;
+  padding: 13px 19px;
+}
+
+.footer__form-textarea {
+  width: 100%;
+  margin-bottom: 15px;
+  border: 1px solid #e3e3e3;
+  border-radius: 3px;
+  padding: 13px 19px;
+  height: 88px;
+  resize: none;
+}
+
+.footer__form-btn {
+  width: 100%;
+  margin-bottom: 32px;
+}
+
+.footer__list-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 40px;
+}
+
+.footer__list-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 44px;
+  height: 44px;
+  background: #ffffff;
+  border-radius: 50%;
+  margin-right: 27px;
+}
+
+.footer__list-tel {
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 49px;
+  color: #fff;
+}
+
+.footer__list-mail {
+  font-size: 36px;
+  line-height: 42px;
+  color: #fff;
+}
+
+.footer__list-adress {
+  font-size: 30px;
+  line-height: 35px;
+}
+
+.footer__social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__social-list li {
+  margin-right: 25px;
+}
+
+.footer .footer__social-link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  padding: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=style.css.map */
