--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,9 @@
 .header-nav {
   background-color: #fff;
   padding: 25px 0 32px;
+  &__btn-hamburger{
+    display: block;
+  }
   &__inner {
     display: flex;
     justify-content: space-between;
